--- a/test/oe-combo.html
+++ b/test/oe-combo.html
@@ -346,8 +346,7 @@
                     var selectedItem = menu.focusedItem;
                     assert.isDefined(selectedItem);
                     assert.equal(menu.indexOf(selectedItem), 0);
-
-                    MockInteractions.keyUpOn(input, 40);
+                    MockInteractions.keyDownOn(menu, 40);
                     flush(function() {
                         selectedItem = menu.focusedItem;
                         assert.isDefined(selectedItem);
@@ -372,7 +371,7 @@
                     assert.equal(menu.indexOf(selectedItem), 0);
 
                     // up-arrow
-                    MockInteractions.keyUpOn(input, 38);
+                    MockInteractions.keyDownOn(menu, 38);
                     flush(function() {
                         selectedItem = menu.focusedItem;
                         assert.isDefined(selectedItem);
@@ -509,7 +508,6 @@
             });
             a11ySuite('basic'); // eslint-disable-line no-undef
         });
-
 
         suite('<oe-combo multi', function() {
 
@@ -651,15 +649,15 @@
 
             });
 
-            test('down arrow + enter selects first element and closes menu', function(done) {
+            test('down arrow + enter selects first element and menu remains opened', function(done) {
                 var input = el.inputElement;
                 MockInteractions.focus(input);
                 MockInteractions.keyUpOn(input, 40);
-                flush(function() {
-                    MockInteractions.pressEnter(input);
+                flush(function() {                    
+                    MockInteractions.pressEnter(el.$.menu.focusedItem);
                     Polymer.Base.async(function() {
-                        assert.equal(el.expand, false);
-                        assert.equal(el.value, (listdata[0])[el.valueproperty]);
+                        assert.equal(el.expand, true);
+                        assert.equal(el.value[0], (listdata[0])[el.valueproperty]);
                         done();
                     }, 500);
                 });
@@ -678,7 +676,8 @@
                     assert.isDefined(selectedItem);
                     assert.equal(menu.indexOf(selectedItem), 0);
 
-                    MockInteractions.keyUpOn(input, 40);
+                    MockInteractions.keyDownOn(menu, 40);
+                   // MockInteractions.keyUpOn(input, 40);
                     flush(function() {
                         selectedItem = menu.focusedItem;
                         assert.isDefined(selectedItem);
@@ -703,7 +702,8 @@
                     assert.equal(menu.indexOf(selectedItem), 0);
 
                     // up-arrow
-                    MockInteractions.keyUpOn(input, 38);
+                    MockInteractions.keyDownOn(menu, 38);
+                    //MockInteractions.keyUpOn(input, 38);
                     flush(function() {
                         selectedItem = menu.focusedItem;
                         assert.isDefined(selectedItem);
@@ -735,7 +735,6 @@
               assert.equal(el.selectedItem, undefined);
             });
         });
-
 
         suite('<oe-combo with template>', function() {
 
@@ -906,8 +905,7 @@
                     var selectedItem = menu.focusedItem;
                     assert.isDefined(selectedItem);
                     assert.equal(menu.indexOf(selectedItem), 0);
-
-                    MockInteractions.keyUpOn(input, 40);
+                    MockInteractions.keyDownOn(menu, 40);
                     flush(function() {
                         selectedItem = menu.focusedItem;
                         assert.isDefined(selectedItem);
@@ -930,7 +928,8 @@
                     assert.equal(menu.indexOf(selectedItem), 0);
 
                     // up-arrow
-                    MockInteractions.keyUpOn(input, 38);
+                    //MockInteractions.keyUpOn(input, 38);
+                    MockInteractions.keyDownOn(menu, 38);
                     flush(function() {
                         selectedItem = menu.focusedItem;
                         assert.isDefined(selectedItem);
@@ -1081,9 +1080,9 @@
                 var dropdown = el.$.dropdown;
                 dropdown && assert.equal(dropdown.opened, false);
             });
-            test('input is hidden', function() {
+            test('input is readonly', function() {
                 var input = el.inputElement;
-                input && assert.equal(input.type, "hidden");
+                input && assert.equal(input.readonly, true);
             });
             test('template div is visible', function() {
 
@@ -1197,7 +1196,7 @@
                 var input = el.inputElement;
                 MockInteractions.focus(input);
                 MockInteractions.keyUpOn(input, 40);
-                flush(function() {
+                flush(function() {                    
                     MockInteractions.pressEnter(input);
                     Polymer.Base.async(function() {
                         assert.equal(el.expand, false);
@@ -1206,7 +1205,7 @@
                     }, 500);
                 });
             });
-
+/* 
             test('When down arrow key is pressed on open dropdown, highlighted item are rotated', function(
                 done) {
                 var input = el.inputElement;
@@ -1254,14 +1253,7 @@
                 });
             });
 
-
-
-
-
-
-
-
-
+ */
         });
         suite('<oe-combo listurl>', function() {
 
