--- a/demo/demo-oe-combo.html
+++ b/demo/demo-oe-combo.html
@@ -37,7 +37,7 @@
           <template>
             <span>{{cval}}</span>
             <oe-combo error-message="Please enter a valid value" label="Country" displayproperty="d" valueproperty="c" required value="{{cval}}"
-              listdata='[{"c":"IN","d":"India"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"UK","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
+              listdata='[{"c":"IN","d":"India"},{"c":"INA","d":"Indiana"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"UK","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
               <iron-icon slot="prefix" icon="home"></iron-icon>
             </oe-combo>
           </template>
