--- a/demo/demo-oe-combo.html
+++ b/demo/demo-oe-combo.html
@@ -10,10 +10,10 @@
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
   <script type="module">
-    import '@polymer/iron-demo-helpers/demo-pages-shared-styles'; 
-    import '@polymer/iron-demo-helpers/demo-snippet'; 
+    import '@polymer/iron-demo-helpers/demo-pages-shared-styles';
+    import '@polymer/iron-demo-helpers/demo-snippet';
     import '@polymer/iron-image/iron-image';
-    import '@polymer/polymer/lib/elements/dom-bind'; 
+    import '@polymer/polymer/lib/elements/dom-bind';
     import '@polymer/polymer/lib/elements/custom-style';
   </script>
 
@@ -35,15 +35,117 @@
       <template>
         <dom-bind>
           <template>
-              <custom-style>
-                  <style>
-                    .custom-input {
+            <custom-style>
+              <style>
+                .custom-input {
                       --paper-input-container-ms-clear:{
                             display:none;
                       };
-                    }
-                  </style>
-                </custom-style>
+                }
+                .custom-class:hover {
+                  --border-color: black;
+                  --label-color: black;
+                  --prefix-color: black;
+                  --suffix-color: black;
+                }
+
+                .custom-class[invalid] {
+                  --border-thick: 2px;
+                  --border-color: red;
+                  --label-color: red;
+                  --prefix-color: red;
+                  --suffix-color: red;
+                }
+
+                .custom-class[focused]:not([invalid]) {
+                  caret-color: blue;
+                  --border-thick: 2px;
+                  --border-color: blue;
+                  --label-color: blue;
+                  --prefix-color: blue;
+                  --suffix-color: blue;
+                }
+
+                .custom-class {
+                  --border-thick: 1px;
+                  --border-color: #828282c9;
+                  --label-color: #828282c9;
+                  --prefix-color: #828282c9;
+                  --suffix-color: #828282c9;
+                  --paper-input-container: {
+                    margin-bottom: 16px;
+                    margin-top: 8px;
+                    border-width: 0px;
+                    box-shadow: 0px 0px 0px var(--border-thick) var(--border-color);
+                    border-radius: 4px;
+                    padding: 0px 0px 0px 5px;
+                    box-sizing: border-box;
+                  }
+                  --iron-input: {
+                    padding: 5px 3px 1px 8px;
+                  }
+
+                  --paper-font-caption: {
+                    position: absolute;
+                  }
+                  --paper-input-container-label-floating: {
+                    z-index: 2;
+                    top: 7px;
+                    padding-top: 0px !important;
+                    display: flex;
+                    background: #FFF;
+
+                  }
+                  --paper-input-container-underline: {
+                    display: none;
+                  }
+
+                  --paper-input-container-underline-focus: {
+                    display: none;
+                  }
+                  --paper-input-container-disabled: {
+                    border: 1px dotted #212121;
+                    border-radius: 4px;
+                    padding: 0px 0px 0px 5px;
+                    box-sizing: border-box;
+
+                  }
+                  --oe-label-mixin: {
+                    color: var(--label-color);
+                    padding: 4px 4px 0px 4px;
+                    margin-left: 4px;
+                    width: auto;
+                  }
+                  --oe-required-mixin: {
+                    color: #FF9800;
+                  }
+                  --paper-input-prefix: {
+                    color: var(--prefix-color);
+                    padding: 0px 0px 0px 5px;
+                    height: 22px;
+                  }
+                  --paper-input-suffix: {
+                    color: var(--suffix-color);
+                    display: flex;
+                    align-items: center;
+                    border-left: 1px solid var(--suffix-color);
+                    border-radius: 0px 4px 4px 0px;
+                    background-color: #eeeeee;
+                    box-sizing: border-box;
+                    height: 32px;
+                    margin-bottom: -2px;
+                  }
+                  --oe-input-error: {
+                    padding-top: 2px;
+                    padding-left: 8px;
+                    font-size: 12px;
+                  }
+                  --paper-material: {
+                    padding-top: 10px;
+                  }
+                }
+              </style>
+            </custom-style>
             <span>{{cval}}</span>
             <oe-combo class="custom-input" error-message="Please enter a valid value" label="Country" displayproperty="d" valueproperty="c" required value="{{cval}}"
               listdata='[{"c":"IN","d":"India"},{"c":"INA","d":"Indiana"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"UK","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
@@ -57,9 +159,9 @@
     <h3>Show Filtered values only</h3>
     <demo-snippet>
       <template>
-        <oe-combo error-message="Please enter a valid value" 
-          show-filtered-only
-          label="Country" displayproperty="d" valueproperty="c" required listdata='[{"c":"IN","d":"India"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"UK","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
+        <oe-combo error-message="Please enter a valid value"
+        show-filtered-only
+        label="Country" displayproperty="d" valueproperty="c" required listdata='[{"c":"IN","d":"India"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"UK","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
         </oe-combo>
       </template>
     </demo-snippet>
@@ -103,7 +205,7 @@
         </dom-bind>
       </template>
     </demo-snippet>
-
+    
     <h3>Allow Free Text</h3>
     <demo-snippet>
       <template>
@@ -148,6 +250,28 @@
             </paper-item>
           </template>
         </oe-combo>
+      </template>
+    </demo-snippet>
+    <h3>oe-combo with custom styles</h3>
+    <demo-snippet>
+      <template>
+          <oe-combo class="custom-class" required label="Country" displayproperty="d" valueproperty="c" value="DE" listdata='[{"c":"IN","d":"India"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"UK","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
+            </oe-combo>
+         
+        <oe-combo  class="custom-class" show-template label="Templated Country Items" displayproperty="d" valueproperty="c" listdata='[{"c":"IN","d":"India"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"GB","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
+          <template item-template>
+            <paper-item on-mouseover="onMouseOver" on-tap="onItemSelected" data-item={{item}} disabled="[[readonly]]">
+              <div class="layout horizontal flex">
+                <iron-image style="width:36px; height:15px;" sizing="contain" src="https://raw.githubusercontent.com/emcrisostomo/flags/master/png/256/{{item.c}}.png"></iron-image>
+                <span class="layout flex centered">{{item.d}}</span>
+                <span>{{item.c}}</span>
+              </div>
+            </paper-item>
+          </template>
+        </oe-combo> 
+        <oe-combo class="custom-class" disabled error-message="Please enter a valid value" show-filtered-only label="Country" displayproperty="d" valueproperty="c"
+        required listdata='[{"c":"IN","d":"India"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"UK","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
+      </oe-combo> 
       </template>
     </demo-snippet>
   </div>
