removed border for disabled oe-combo

--- a/demo/demo-oe-combo.html
+++ b/demo/demo-oe-combo.html
@@ -189,7 +189,11 @@
               --prefix-color: red;
               --suffix-color: red;
             }
-
+            .custom-class[disabled] {
+                  --border-color: none;
+                  --label-color: #212121;
+                  --suffix-color: #212121;
+                }
             .custom-class[focused]:not([invalid]) {
               caret-color: blue;
               --border-thick: 2px;
