--- a/demo/demo-oe-typeahead.html
+++ b/demo/demo-oe-typeahead.html
@@ -42,6 +42,12 @@
         --suffix-color: red;
       }
 
+      .custom-class[disabled] {
+        --border-color: none;
+        --label-color: #212121;
+        --suffix-color: #212121;
+      }
+
       .custom-class[focused]:not([invalid]) {
         caret-color: blue;
         --border-thick: 2px;
@@ -140,12 +146,14 @@
       <template>
         <dom-bind>
           <template>
-            <oe-typeahead label="Object property as value" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10" displayproperty="title" valueproperty="url" value="{{value2}}"></oe-typeahead>
+            <oe-typeahead label="Object property as value" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10"
+              displayproperty="title" valueproperty="url" value="{{value2}}"></oe-typeahead>
             <template is="dom-if" if=[[value2]]>
               <label>[[value2]]</label>
             </template>
 
-            <oe-typeahead label="Object as value" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10" displayproperty="title" value="{{value1}}"></oe-typeahead>
+            <oe-typeahead label="Object as value" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10"
+              displayproperty="title" value="{{value1}}"></oe-typeahead>
             <template is="dom-if" if=[[value1]]>
               <pre>
               {
@@ -159,10 +167,11 @@
             </template>
 
             <oe-typeahead label="Preset Value" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10"
-              dataurl="https://jsonplaceholder.typicode.com/photos/VALUE_STRING" 
-              displayproperty="title" valueproperty="id" value="1"></oe-typeahead>
+              dataurl="https://jsonplaceholder.typicode.com/photos/VALUE_STRING" displayproperty="title" valueproperty="id"
+              value="1"></oe-typeahead>
 
-            <oe-typeahead dir="auto" label="كنية" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10" displayproperty="title" valueproperty="url" value="{{value2}}"></oe-typeahead>
+            <oe-typeahead dir="auto" label="كنية" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10"
+              displayproperty="title" valueproperty="url" value="{{value2}}"></oe-typeahead>
           </template>
         </dom-bind>
       </template>
@@ -173,16 +182,20 @@
       <template>
         <dom-bind>
           <template>
-            <oe-typeahead label="Disabled" disabled searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10" displayproperty="title" valueproperty="url" value="{{value0}}"></oe-typeahead>
+            <oe-typeahead label="Disabled" disabled searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10"
+              displayproperty="title" valueproperty="url" value="{{value0}}"></oe-typeahead>
             <oe-typeahead label="Read Only" readonly searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10"
-              dataurl="https://jsonplaceholder.typicode.com/photos/VALUE_STRING" 
-              displayproperty="title" valueproperty="id" value="1"></oe-typeahead>
-           
-            <oe-typeahead label="Required" required searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10" displayproperty="title" valueproperty="url" value="{{value1}}"></oe-typeahead>
+              dataurl="https://jsonplaceholder.typicode.com/photos/VALUE_STRING" displayproperty="title" valueproperty="id"
+              value="1"></oe-typeahead>
+
+            <oe-typeahead label="Required" required searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10"
+              displayproperty="title" valueproperty="url" value="{{value1}}"></oe-typeahead>
             <span>[[value1]]</span>
-            <oe-typeahead label="Strict" strict searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10" displayproperty="title" valueproperty="url" value="{{value2}}"></oe-typeahead>
+            <oe-typeahead label="Strict" strict searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10"
+              displayproperty="title" valueproperty="url" value="{{value2}}"></oe-typeahead>
             <span>[[value2]]</span>
-            <oe-typeahead label="Required & Strict" required strict searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10" displayproperty="title" valueproperty="url" value="{{value3}}"></oe-typeahead>
+            <oe-typeahead label="Required & Strict" required strict searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10"
+              displayproperty="title" valueproperty="url" value="{{value3}}"></oe-typeahead>
             <span>[[value3]]</span>
           </template>
         </dom-bind>
@@ -192,7 +205,8 @@
     <h3>Templating the Item</h3>
     <demo-snippet>
       <template>
-        <oe-typeahead label="Templated Items" required searchurl="https://jsonplaceholder.typicode.com/users?q=SEARCH_STRING&_limit=10" displayproperty="name" valueproperty="email" value="{{value1}}">
+        <oe-typeahead label="Templated Items" required searchurl="https://jsonplaceholder.typicode.com/users?q=SEARCH_STRING&_limit=10"
+          displayproperty="name" valueproperty="email" value="{{value1}}">
           <template item-template>
             <paper-item on-mouseover="onMouseOver" on-tap="onItemSelected" data-item={{item}} disabled=[[readOnly]]>
               <paper-item-body two-line>
@@ -208,7 +222,8 @@
           </template>
         </oe-typeahead>
 
-        <oe-typeahead dir="auto" label="من اليمين الى اليسار" required searchurl="https://jsonplaceholder.typicode.com/users?q=SEARCH_STRING&_limit=10" displayproperty="name" valueproperty="email" value="{{value1}}">
+        <oe-typeahead dir="auto" label="من اليمين الى اليسار" required searchurl="https://jsonplaceholder.typicode.com/users?q=SEARCH_STRING&_limit=10"
+          displayproperty="name" valueproperty="email" value="{{value1}}">
           <template item-template>
             <paper-item on-mouseover="onMouseOver" on-tap="onItemSelected" data-item={{item}} disabled=[[readOnly]]>
               <paper-item-body two-line>
@@ -229,16 +244,16 @@
     <h3>oe-typeahead with custom style</h3>
     <demo-snippet>
       <template>
-          <oe-typeahead class="custom-class" label="Required & Strict" required strict searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10"
+        <oe-typeahead class="custom-class" label="Required & Strict" required strict searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10"
           displayproperty="title" valueproperty="url"></oe-typeahead>
-      <oe-typeahead class="custom-class"  label="Object property as value" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10"
-      displayproperty="title" valueproperty="url" value="{{value2}}"></oe-typeahead>
-    <template is="dom-if" if=[[value2]]>
-      <label>[[value2]]</label>
-    </template>
-    <oe-typeahead  class="custom-class"  label="Disabled" disabled searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10"
-    displayproperty="title" valueproperty="url" value="{{value0}}">
-  </oe-typeahead>
+        <oe-typeahead class="custom-class" label="Object property as value" searchurl="https://jsonplaceholder.typicode.com/photos?title_like=SEARCH_STRING&_limit=10"
+          displayproperty="title" valueproperty="url" value="{{value2}}"></oe-typeahead>
+        <template is="dom-if" if=[[value2]]>
+          <label>[[value2]]</label>
+        </template>
+        <oe-typeahead class="custom-class" label="Disabled" disabled searchurl="https://jsonplaceholder.typicode.com/albums?title_like=SEARCH_STRING&_limit=10"
+          displayproperty="title" valueproperty="url" value="{{value0}}">
+        </oe-typeahead>
       </template>
     </demo-snippet>
   </div>
