added oe-dropdown-submenu to oe-combo

--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,8 @@
       // Load and run all tests (.html, .js):
       WCT.loadSuites([
         'oe-combo_test.html',
-        'oe-typeahead_test.html'
+        'oe-typeahead_test.html',
+        'oe-dropdown-submenu_test.html'
       ]);
     </script>
   </body>
